src/com/magis/app/css/style.css
@font-face {
    src: url('RobotoMono-Bold.ttf');
}

@font-face {
    src: url('RobotoMono-BoldItalic.ttf');
}

@font-face {
    src: url('RobotoMono-Italic.ttf');
}

@font-face {
    src: url('RobotoMono-Light.ttf');
}

@font-face {
    src: url('RobotoMono-MediumItalic.ttf');
}

@font-face {
    src: url('RobotoMono-Regular.ttf');
}

@font-face {
    src: url('RobotoMono-Thin.ttf');
}

@font-face {
    src: url('RobotoMono-ThinItalic.ttf');
}

.root {
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.borderpane-home {
    -fx-background-color: #ffffff;

}

.separator-home {

}

.borderpane-lesson {

}

.borderpane-test {

}

.lesson-side-panel-text {
    -fx-font-size: 18px;
    -fx-font-family: "Roboto Mono Light";
    -fx-text-fill: #ffb5d6;

}

.lesson-text {
    -fx-font-size: 15px;
    -fx-font-family: "Roboto Mono Regular";
    -fx-text-fill: #200310;
}

.sidebar {
    -fx-background-color: #AD1457; /* Pink 800 */
}

.button {
    -fx-background-color: #D81B60; /* Pink 600 */
    -fx-font-family: "Roboto Mono Regular";
    -fx-text-fill: #ffffff
}

.button:hover {
    -fx-background-color: #E91E63; /* Pink 500 */
}

.button:pressed {
    -fx-background-color: #AD1457; /* Pink 800 */
}

.start-test-button {
    -fx-font-size: 28px;
}

.submit-test-button {
    -fx-font-size: 16px;
}

.test-radio-button:disabled {
    -fx-opacity: 0.8;
}

.menu-bar {
    -fx-background-color: #AD1457
}


.title-bar {
    -fx-background-color: #C2185B;
}

.login-box {
-fx-background-color: #ffffff;
}

.sign-in-field {
    -fx-control-inner-background: #f9f9f9;
    -fx-padding: 1em 1em 1em 1em;
    -fx-background-radius: 25px;
}

/*
The greeting ("Hello, Ian!") on the home page
*/
.greeting-text {
    -fx-font-family: "Roboto Mono Regular";
    -fx-text-fill: #181818;
    -fx-font-size: 3.0em;
}

.drop-shadow {
    -fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.1), 15, 0, 0, 8);
}

/* the chevron text for navigating pages */
.navigation-text {
    -fx-font-family: "Roboto Mono Regular";
    -fx-text-fill: #939393;
    -fx-font-size: 2.0em;
}

/*text for grade result inside circle*/
.grade-text {
    -fx-font-family: "Roboto Mono Regular";
    -fx-fill: #ffffff;
    -fx-font-size: 3.5em;
}

/* Main text below the grade circle */
.grade-main-text {
    -fx-font-family: "Roboto Mono Regular";
    -fx-font-size: 2.0em;
    -fx-fill: #515151;
}

/* set default fill of svg path */
.icon-button .button-icon {
    -fx-fill: #fff;
}

/* set default fill of svg path */
/*
.icon-button:focused {
    -fx-background-color: lightblue;
    -fx-background-radius: 0;
}
*/

/* remove default button style & set size */
.icon-button {
    -fx-background-color: transparent, transparent, transparent, transparent, transparent;
    -fx-pref-height: 30;
    -fx-pref-width: 30;
    -fx-min-height: 30;
    -fx-min-width: 30;
    -fx-max-height: 30;
    -fx-max-width: 30;
}

/* modify svg path fill for hovered/pressed button */
.icon-button:pressed .button-icon,
.icon-button:hover .button-icon {
    -fx-fill: #fff;
}

.chapter-box-scrollpane {
   -fx-alignment: center;
}

/* Home page container for all of the chapters */
.chapter-box-container {
    -fx-alignment: center;
    -fx-padding: 50px 0 150px 0;
    -fx-spacing: 50px;
}


.chapter-box {
    -fx-background-color: #ffffff;
    -fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.1), 15, 0, 0, 8);
    -fx-padding: 20px;
    -fx-alignment: center;
    -fx-background-radius: 25px;

}

.chapter-title-text {
    -fx-font-size: 1.5em;
    -fx-font-family: "Roboto Mono Bold";
}

.page-title-text {
    -fx-font-size: 2.5em;
    -fx-font-family: "Roboto Mono Bold";
}

.chapter-description-text {
    -fx-font-family: "Roboto Mono Regular";
    -fx-text-fill: #939393
}

